agregando estilos y modificando index.html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
             <li>git commit</li>
         </ul>
     </div>
+    <div>
+        <h2>Nuevo contenido para el blog</h2>
+    </div>
 </body>
 </html>
