games of year list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </ul>
     </div>
     <div>
-        <h2>Nuevo contenido para el blog</h2>
+        <h2>Games of year</h2>
+        <ul>
+            <li>Fornite</li>
+            <li>Call of Duty 4</li>
+            <li>CSGO</li>
+        </ul>
     </div>
 </body>
 </html>
