--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         </ul>
     </div>
     <div>
-        <h2>Games of year</h2>
+        <h2>Games of year 2024</h2>
         <ul>
             <li>Fornite</li>
             <li>Call of Duty 4</li>
             <li>CSGO</li>
+            <li>Dota 2</li>
+            <li>Rust</li>
         </ul>
     </div>
 </body>
